Fix right overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
     border: none;
 }
 
+html,body{
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Open Sans', serif;
     font-weight: 400;
@@ -268,7 +272,6 @@ footer {
 
 @media screen and (max-width: 1100px) {
     #pageTitle {
-
         margin-top: 100px
     }
     .img {
@@ -290,6 +293,7 @@ footer {
         margin: 0;
         margin-top: 30px;
         float: none;
+        clear: right;
     }
 
 }
